--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "SpotifyNoPremium",
-    "description": "A cross-platform Spicetify theme which declutters Spotify stock UI and removes all ads.",
+    "description": "A cross-platform Spicetify theme which declutters Spotify stock UI and removes all ads 1-0b.",
     "preview": "https://drive.google.com/file/d/1kuytplB3AsYESYbydX8PaVMKqobAV_fy/view",
     "readme": "README.md",
     "usercss": "user.css",
